--- a/templates/modal_base.html
+++ b/templates/modal_base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<form method="post" action="">
+<form method="post" action="" enctype="multipart/form-data">
   {% csrf_token %}
 
   <div class="modal-header jb-modal">
