--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -103,11 +103,11 @@
   
   <div class="jb-section jb-table-no-lines">
     <h1 class="jb-heading-2">Papers</h1>
-    <table>
+    <table class="jb-paper-table">
       {% for paper,label in all_papers %}
       <tr>
-	<td>{{ label }}</td>
-	<td style="white-space:nowrap;padding: 0px 5px;"><a href="{{ paper.get_absolute_url }}">{{ paper.cite_as }}</a></td>
+	<td valign="top">{{ label }}</td>
+	<td style="white-space:nowrap;"><a href="{{ paper.get_absolute_url }}">{{ paper.cite_as }}</a></td>
 	<td><i>"{{ paper.title }}"</i></td>
       </tr>
       {% empty %}
