--- a/sled_papers/templates/sled_papers/paper_query.html
+++ b/sled_papers/templates/sled_papers/paper_query.html
@@ -5,7 +5,9 @@
 
 {% block content %}
 <div class="jb-container">
+
   <h1 class="jb-heading-1">Search Papers</h1>
+
   <form method="POST">
     {% csrf_token %}
     <div class="{% if form.non_field_errors %}invalid{% endif %} mb-2">
@@ -21,8 +23,9 @@
       <input type="submit" value="Search">
     </p>
   </form>
+
   {% if papers_search %}
-  <table class="jb-table">
+  <table class="jb-table jb-paper-table">
     <thead>
       <tr>
         <th>Author(s)</th>
@@ -33,7 +36,7 @@
     <tbody>
       {% for paper in papers_search %}
       <tr>
-        <td style="white-space:nowrap;padding: 0px 5px;"><a href="{{ paper.get_absolute_url }}">{{paper.cite_as}}</td>
+        <td style="white-space:nowrap;"><a href="{{ paper.get_absolute_url }}">{{paper.cite_as}}</td>
         <td><i>"{{ paper.title }}"</i></td>
         <td>{{ paper.lenses_in_paper.all|length }}</td>
       </tr>
